force-app/main/default/objects/ArchivedContact__x/ArchivedContact__x.object-meta.xml
<CustomObject>
    <description>Contact</description>
    <externalDataSource>Privacy_Center_Retention_Store</externalDataSource>
    <externalName>contact</externalName>
    <label>Archived Contact</label>
    <pluralLabel>Archived Contacts</pluralLabel>
</CustomObject>