force-app/main/default/objects/ArchivedContact__x/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>accountid</externalDeveloperName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ArchivedContact</relationshipName>
    <type>Lookup</type>
</CustomField>