force-app/main/default/objects/ArchivedContact__x/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <externalDeveloperName>accountid</externalDeveloperName>
    <label>Account ID</label>
    <length>18</length>
    <referenceTargetField>Account.ID__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Archived Contacts (Account ID)</relationshipLabel>
    <relationshipName>Archived_Contacts</relationshipName>
    <type>IndirectLookup</type>
</CustomField>