force-app/main/default/objects/ArchivedContact__x/fields/ActiveLiveAgentUser__c.field-meta.xml
<CustomField>
    <fullName>ActiveLiveAgentUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>c_00_n2w00000_qx_y_px</externalDeveloperName>
    <label>ActiveLiveAgentUser</label>
    <type>Checkbox</type>
</CustomField>