force-app/main/default/objects/ArchivedContact__x/fields/Allow_Customer_Portal_Self_Registrati__c.field-meta.xml
<CustomField>
    <fullName>Allow_Customer_Portal_Self_Registrati__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>canallowportalselfreg</externalDeveloperName>
    <label>Allow Customer Portal Self-Registration</label>
    <type>Checkbox</type>
</CustomField>