force-app/main/default/objects/ArchivedContact__x/fields/Assistant_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Assistant_s_Name__c</fullName>
    <externalDeveloperName>assistantname</externalDeveloperName>
    <label>Assistant&apos;s Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>