force-app/main/default/objects/ArchivedContact__x/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <externalDeveloperName>birthdate</externalDeveloperName>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>