force-app/main/default/objects/ArchivedContact__x/fields/Buyer_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Attributes__c</fullName>
    <externalDeveloperName>buyerattributes</externalDeveloperName>
    <label>Buyer Attributes</label>
    <length>765</length>
    <type>LongTextArea</type>
</CustomField>