force-app/main/default/objects/ArchivedContact__x/fields/Canvas_Log__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Log__c</fullName>
    <externalDeveloperName>c_00_n2w00000bwe_d_t</externalDeveloperName>
    <label>Canvas_Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>