force-app/main/default/objects/ArchivedContact__x/fields/Contact_Description__c.field-meta.xml
<CustomField>
    <fullName>Contact_Description__c</fullName>
    <externalDeveloperName>description</externalDeveloperName>
    <label>Contact Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>