force-app/main/default/objects/ArchivedContact__x/fields/Creation_Source__c.field-meta.xml
<CustomField>
    <fullName>Creation_Source__c</fullName>
    <externalDeveloperName>contactsource</externalDeveloperName>
    <label>Creation Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>