force-app/main/default/objects/ArchivedContact__x/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <externalDeveloperName>department</externalDeveloperName>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>