force-app/main/default/objects/ArchivedContact__x/fields/Department_Group__c.field-meta.xml
<CustomField>
    <fullName>Department_Group__c</fullName>
    <externalDeveloperName>departmentgroup</externalDeveloperName>
    <label>Department Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>