force-app/main/default/objects/ArchivedContact__x/fields/external_id__c.field-meta.xml
<CustomField>
    <fullName>external_id__c</fullName>
    <externalDeveloperName>c_00_n2w00000_qx_y_p_p</externalDeveloperName>
    <label>External id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>