force-app/main/default/objects/ArchivedContact__x/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <externalDeveloperName>firstname</externalDeveloperName>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>