force-app/main/default/objects/ArchivedContact__x/fields/Gender_Identity__c.field-meta.xml
<CustomField>
    <fullName>Gender_Identity__c</fullName>
    <externalDeveloperName>genderidentity</externalDeveloperName>
    <label>Gender Identity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>