force-app/main/default/objects/ArchivedContact__x/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <externalDeveloperName>id</externalDeveloperName>
    <label>Id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>