force-app/main/default/objects/ArchivedContact__x/fields/Is_Email_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Is_Email_Bounced__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>isemailbounced</externalDeveloperName>
    <label>Is Email Bounced</label>
    <type>Checkbox</type>
</CustomField>