force-app/main/default/objects/ArchivedContact__x/fields/Is_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Person_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>ispersonaccount</externalDeveloperName>
    <label>Is Person Account</label>
    <type>Checkbox</type>
</CustomField>