force-app/main/default/objects/ArchivedContact__x/fields/Jigsaw_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Jigsaw_Contact_ID__c</fullName>
    <externalDeveloperName>jigsawcontactid</externalDeveloperName>
    <label>Jigsaw Contact ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>