force-app/main/default/objects/ArchivedContact__x/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <externalDeveloperName>lastactivitydate</externalDeveloperName>
    <label>Last Activity</label>
    <type>Date</type>
</CustomField>