force-app/main/default/objects/ArchivedContact__x/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <externalDeveloperName>lastname</externalDeveloperName>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>