force-app/main/default/objects/ArchivedContact__x/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <externalDeveloperName>leadsource</externalDeveloperName>
    <label>Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>