force-app/main/default/objects/ArchivedContact__x/fields/Loyalty_Id__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Id__c</fullName>
    <externalDeveloperName>c_00_n2w00000_qx_y_ru</externalDeveloperName>
    <label>Loyalty Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>