force-app/main/default/objects/ArchivedContact__x/fields/Mailing_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Latitude__c</fullName>
    <externalDeveloperName>mailinglatitude</externalDeveloperName>
    <label>Mailing Latitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>