force-app/main/default/objects/ArchivedContact__x/fields/Mailing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State_Province__c</fullName>
    <externalDeveloperName>mailingstate</externalDeveloperName>
    <label>Mailing State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>