force-app/main/default/objects/ArchivedContact__x/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <externalDeveloperName>mailingstreet</externalDeveloperName>
    <label>Mailing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>