force-app/main/default/objects/ArchivedContact__x/fields/Master_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_Record_ID__c</fullName>
    <externalDeveloperName>masterrecordid</externalDeveloperName>
    <label>Master Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>