force-app/main/default/objects/ArchivedContact__x/fields/Other_Country__c.field-meta.xml
<CustomField>
    <fullName>Other_Country__c</fullName>
    <externalDeveloperName>othercountry</externalDeveloperName>
    <label>Other Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>