force-app/main/default/objects/ArchivedContact__x/fields/Other_Geocode_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Other_Geocode_Accuracy__c</fullName>
    <externalDeveloperName>othergeocodeaccuracy</externalDeveloperName>
    <label>Other Geocode Accuracy</label>
    <length>40</length>
    <type>Text</type>
</CustomField>