force-app/main/default/objects/ArchivedContact__x/fields/Other_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Other_Longitude__c</fullName>
    <externalDeveloperName>otherlongitude</externalDeveloperName>
    <label>Other Longitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>