force-app/main/default/objects/ArchivedContact__x/fields/Other_Street__c.field-meta.xml
<CustomField>
    <fullName>Other_Street__c</fullName>
    <externalDeveloperName>otherstreet</externalDeveloperName>
    <label>Other Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>