force-app/main/default/objects/ArchivedContact__x/fields/Other_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Other_Zip_Postal_Code__c</fullName>
    <externalDeveloperName>otherpostalcode</externalDeveloperName>
    <label>Other Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>