force-app/main/default/objects/ArchivedContact__x/fields/Reports_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Reports_To_ID__c</fullName>
    <externalDeveloperName>reportstoid</externalDeveloperName>
    <label>Reports To ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>