force-app/main/default/objects/ArchivedContact__x/fields/Seniority_Level__c.field-meta.xml
<CustomField>
    <fullName>Seniority_Level__c</fullName>
    <externalDeveloperName>titletype</externalDeveloperName>
    <label>Seniority Level</label>
    <length>40</length>
    <type>Text</type>
</CustomField>