force-app/main/default/objects/ArchivedContact__x/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <externalDeveloperName>title</externalDeveloperName>
    <label>Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>